# inei-microdatos

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
scripts/: update_2025.py
src/inei_microdatos/: __init__.py  __main__.py  aliases.py  catalog.py  cli.py  client.py  download.py  reader.py  variables.py
tests/: test_catalog.py  test_client.py
